--- a/client/package.json
+++ b/client/package.json
@@ -5,12 +5,17 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel js/app-es6 -d js/app"
+    "build": "babel js/app-es6 -d js/app",
+    "watch": "babel js/app-es6 -d js/app --watch"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.10.1",
+    "babel-plugin-transform-es2015-modules-systemjs": "^6.9.0",
     "babel-preset-es2015": "^6.9.0"
+  },
+  "dependencies": {
+    "systemjs": "^0.19.31"
   }
 }
